Invoking mongodb services

--- a/public/partials/chartForm.html
+++ b/public/partials/chartForm.html
@@ -43,7 +43,7 @@
 				<br/><br/>
 				<input colorpicker id='pointcolor' type="text" class="form-control" ng-model="pointcolor" />
 				<br/><br/>
-				<button class="btn btn-primary" ng-click="addconsumer()"
+				<button class="btn btn-primary" ng-click="addConsumerForm()"
 						ng-disabled="form.$invalid || innerform.$invalid">
 					Add consumer <span class="glyphicon glyphicon-plus"></span>
 				</button>
@@ -52,6 +52,9 @@
 	</div>
 	<div class="right well">
 		<chart chart-type="form"></chart>
+		<button ng-click="saveChart()">
+			Save Chart
+		</button>
 	</div>	
 </div>
 
