Save charts and get all charts implemented

--- a/client/partials/chart.html
+++ b/client/partials/chart.html
@@ -1,1 +1,4 @@
 <div id="chart" class="chart"></div>
+<button class="btn btn-success" ng-click="saveChart()">
+    Save Chart <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+</button>
