--- a/client/partials/navbar.html
+++ b/client/partials/navbar.html
@@ -15,11 +15,14 @@
                 <li ng-class="{ active: isActive('/info') }">
                     <a href="#/info">Info</a>
                 </li>
-                <li ng-class="{ active: isActive('/form') }">
-                    <a href="#/form">Form</a>
+                <li ng-class="{ active: isActive('/manual') }">
+                    <a href="#/manual">Manual</a>
                 </li>
                 <li ng-class="{ active: isActive('/random') }">
                     <a href="#/random">Random</a>
+                </li>
+                <li ng-class="{ active: isActive('/listCharts') }">
+                    <a href="#/listCharts">List of Charts</a>
                 </li>
             </ul>
         </div>
