--- a/client/partials/random.html
+++ b/client/partials/random.html
@@ -25,7 +25,6 @@
 												 (form.max.$error.min || form.max.$error.max)">
                     The VALUES must be between 0 and 100
                 </p>
-
                 <div class='input-group'>
                     <span class="input-group-addon">
                         <h4 class="panel-title">Number of X axis</h4>
@@ -56,8 +55,8 @@
                 </div>
                 <p>
                 <button class="btn btn-primary" ng-click="randomChart(0)"
-                        ng-disabled="!wsEnabled || form.$invalid || innerform.$invalid">
-                    Generate Chart <span class="glyphicon glyphicon-stats"></span>
+                        ng-disabled="form.$invalid || innerform.$invalid">
+                    Custom Chart <span class="glyphicon glyphicon-stats"></span>
                 </button>
                 </p>
                 <p>
@@ -74,6 +73,6 @@
         </div>
     </div>
     <div class="right well">
-        <chart chart-type="ws"></chart>
+        <chart chart-type="random"></chart>
     </div>
 </div>
