--- a/client/partials/directives/chart.html
+++ b/client/partials/directives/chart.html
@@ -1,6 +1,7 @@
 <customdialog></customdialog>
+<savechartdialog></savechartdialog>
 <div id="chart" class="chart"></div>
-<button class="btn btn-success" ng-click="saveChart()">
+<button class="btn btn-success" ng-click="clickSaveChart()">
     Save Chart <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
 </button>
 <button class="btn btn-primary" ng-click="exportChart()">
