Get chart details view implemented

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -42,3 +42,13 @@ body {
 .chart {
     border-radius: 1%;
 }
+
+textarea {
+    resize: vertical;
+    max-height: 500px;
+}
+
+.description {
+    width: auto;
+    height: auto;
+}
