--- a/client/partials/dialog/savechartdialog.html
+++ b/client/partials/dialog/savechartdialog.html
@@ -10,8 +10,8 @@
         <textarea class="form-control" rows="1" ng-model="description" placeholder="Description"></textarea>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="saveChart()">OK</button>
-        <button class="btn btn-warning" ng-click="cancelSaveChart()">Cancel</button>
+          <button class="btn btn-success" ng-click="saveChart()">OK</button>
+          <button class="btn btn-primary" ng-click="closeSaveChartDialog()">Cancel</button>
       </div>
     </div>
   </div>
