--- a/client/partials/pages/chartDetails.html
+++ b/client/partials/pages/chartDetails.html
@@ -1,3 +1,8 @@
 <div id="container">
-
+    <div class="well">
+        <chart chart-type="detail"></chart>
+    </div>
+    <blockquote>
+        <p><em>{{description}}</em></p>
+    </blockquote>
 </div>
