Added table for charts

--- a/client/partials/pages/info.html
+++ b/client/partials/pages/info.html
@@ -2,7 +2,7 @@
     <div class="well center">
         <h1>Welcome to ChartsJS!</h1>
 
-        <p>A sample AngularJS + Highcharts web application</p>
+        <p>A MEAN(MongoDB + ExpressJS + AngularJS + NodeJS) application to share your charts!</p>
     </div>
     <accordion>
         <accordion-group is-open="status.open" ng-repeat="group in groups">
